# podsync

./: .gitignore  README.md  pyproject.toml
podsync/: __init__.py  __main__.py  config.py  download.py
podsync/sources/: direct.py  helpers.py  mp3.py  playerfm.py  podbean.py  source.py  youtube.py
